@@ -55,6 +55,7 @@ TRUNK
 - Forwarded header from RFC 7239 supported, disabled by default
 - mod_http_file_share now uses roles framework, affecting access from e.g. components
 - Intervals of mod_cron managed periodic jobs made configurable
+- When mod_smacks is enabled, s2s connections not responding to ack requests are closed.
 
 ## Removed
 
